--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -5,10 +5,12 @@
         Add
       </button>
       <div class="dropdown-menu" aria-labelledby="addCOntentDD">
-        <a class="dropdown-item curs-ptr" (click)="openModal(usrModal,'add')"><i class="fas fa-user-plus mr-1"></i>Create
-          New User</a>
-        <a class="dropdown-item" [routerLink]="'/user/import'"><i class="fas fa-file-import mr-1"></i>Import CSV
-          File</a>
+        <a class="dropdown-item curs-ptr" (click)="openModal(usrModal,'add')"><i class="fas fa-user-plus mr-1"></i>
+          Create New User
+        </a>
+        <a class="dropdown-item" [routerLink]="'/user/import'"><i class="fas fa-file-import mr-1"></i>
+          Import CSV File
+        </a>
       </div>
     </div>
   </div>
@@ -17,136 +19,35 @@
     <div class="sub-tab-nav" [ngClass]="{'col-md-12': !showRowInfo, 'col-md-8': showRowInfo}">
       <div class="card overflow-hidden">
         <div class="card-header border-0">
-          <mat-tab-group>
+          <mat-tab-group [selectedIndex]="activeIndex" (selectedTabChange)="onTabChange($event)">
             <mat-tab label="All Users">
               <div class="card-body rounded-bottom bg-white px-0 pb-0">
-                <h5 class="card-title px-3">
-                  <div class="row heading">
-                    <div class="search col-lg-8 col-sm-7">
-                      <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
-                        <i matPrefix class="fas fa-search"></i>
-                        <input matInput placeholder="Search ..." #sear [(ngModel)]="searchTxt">
-                        <div matSuffix class="curs-ptr">
-                          <i class="fas fa-sliders-h"></i>
-                        </div>
-                      </mat-form-field>
-                    </div>
-                    <div class="col-lg-4 col-sm-5 align-self-center">
-                      <div class="float-left">
-                        <!-- Button trigger for send invitations modal -->
-                        <button type="button" class="btn btn-light" (click)="openModal(sendInvitation)">
-                          Send Invitations
-                        </button>
-                      </div>
-                      <div class="float-right">
-                        <div class="dropdown" (clickOutside)="outsideCloseDD(cogDropDown, $event)">
-                          <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
-                            <i class="fas fa-cog"></i>
-                          </button>
-                          <div class="cog dropdown-menu dropdown-menu-right" #cogDropDown>
-                            <div class="scrollable">
-                              <span class="ml-2 heading">Visible Columns</span>
-                              <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList" [cdkDropListData]="visbCols" class="min-ht pl-0 mt-2" [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
-                                <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index" cdkDrag>
-                                  <span class="ellipsis mr-2">
-                                    <i class="fa fa-ellipsis-v"></i>
-                                    <i class="fa fa-ellipsis-v"></i>
-                                  </span>
-                                  <i class="text-primary fas fa-eye mr-2" (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
-                                </button>
-                                <span *ngIf="visbCols.length==0" class="ml-4 text-secondary">
-                                  No visbible columns
-                                </span>
-                              </ul>
-                              <span class="ml-2 heading">Hidden Columns</span>
-                              <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList" [cdkDropListData]="hidCols" class="min-ht pl-0 mt-2 mb-0" [cdkDropListConnectedTo]="[visbList]" (cdkDropListDropped)="drop($event)">
-                                <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index" cdkDrag>
-                                  <span class="ellipsis mr-2 mb-1">
-                                    <i class="fa fa-ellipsis-v"></i>
-                                    <i class="fa fa-ellipsis-v"></i>
-                                  </span>
-                                  <i class="fas fa-eye-slash mr-2" (click)="showHideCols(col,'show',i)"></i>{{col.n}}
-                                </button>
-                                <span *ngIf="hidCols.length==0" class="ml-4 text-secondary">
-                                  No hidden columns
-                                </span>
-                              </ul>
-                            </div>
-                            <hr class="mb-2">
-                            <div class="float-right mr-2">
-                              <button class="btn btn-secondary btn-sm mr-2" (click)=closeDropdown($event)>Cancel</button>
-                              <button class="btn btn-primary btn-sm" (click)=saveHdrChngs($event);>Save</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </h5>
-                <div class="card-text px-3">
-                  <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showRowInfo}">
-                    <thead>
-                      <tr>
-                        <th class="curs-ptr" *ngFor="let col of cols">
-                          {{col.n}}
-                          <i class="fas ml-1" [ngClass]="{'fa-sort-down align-top': col.dir==1, 'fa-sort-up align-bottom': col.dir==0}"></i>
-                        </th>
-                      </tr>
-                    </thead>
-                    <tbody *ngIf="!lstLoading && usrs.length > 0">
-                      <tr *ngFor="let usr of usrs" (click)="toggleInfo(usr)">
-                        <td *ngFor="let col of cols">
-                          <span [ngSwitch]="col.key">
-                            <span *ngSwitchCase="'name'">
-                              {{usr.firstName}}<small><br />{{usr.email}}</small>
-                            </span>
-                            <span *ngSwitchCase="'role'">
-                              {{usr.roleId && usrRoles[usr.roleId]?usrRoles[usr.roleId]:'N/A'}}
-                            </span>
-                            <span *ngSwitchDefault>{{col.key}}{{usr[col.key]}}</span>
-                          </span>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <div class="text-center text-secondary" *ngIf="!lstLoading && usrs.length == 0">
-                    No User found
-                  </div>
-                  <app-loader [type]="'page'" *ngIf="lstLoading"></app-loader>
-                </div>
-                <div class="card-footer row justify-content-between mx-0">
-                  <div class="pages">
-                    <mat-form-field appearance="outline" class="mr-2">
-                      <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
-                        <mat-option *ngFor="let lP of lmtPage" [value]="lP">{{lP}}</mat-option>
-                      </mat-select>
-                    </mat-form-field>
-                    <span>Showing 1-10 of 100 </span>
-                  </div>
-                  <ul class="pagination">
-                    <li class="page-item disabled">
-                      <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
-                        <i class="fas fa-chevron-left"></i>
-                      </a>
-                    </li>
-                    <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
-                    <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
-                    <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
-                    <li class="page-item">
-                      <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
-                    </li>
-                  </ul>
-                </div>
+                <ng-container *ngTemplateOutlet="srcHdrTxt"></ng-container>
+                <app-loader [type]="'page'" *ngIf="loading"></app-loader> <!-- loader -->
+                <ng-container *ngTemplateOutlet="usrTable"></ng-container>
               </div>
             </mat-tab>
-            <mat-tab label="Active Users">Same Table</mat-tab>
-            <mat-tab label="Deactive Users">Same Table</mat-tab>
+            <mat-tab label="Active Users">
+              <div class="card-body rounded-bottom bg-white px-0 pb-0">
+                <ng-container *ngTemplateOutlet="srcHdrTxt"></ng-container>
+                <app-loader [type]="'page'" *ngIf="loading"></app-loader> <!-- loader -->
+                <ng-container *ngTemplateOutlet="usrTable"></ng-container>
+              </div>
+            </mat-tab>
+            <mat-tab label="Deactive Users">
+              <div class="card-body rounded-bottom bg-white px-0 pb-0">
+                <ng-container *ngTemplateOutlet="srcHdrTxt"></ng-container>
+                <app-loader [type]="'page'" *ngIf="loading"></app-loader> <!-- loader -->
+                <ng-container *ngTemplateOutlet="usrTable"></ng-container>
+              </div>
+            </mat-tab>
           </mat-tab-group>
         </div>
       </div>
     </div>
     <div class="workspace w-100 col-md-4" *ngIf="showRowInfo">
-      <div class="doc">
+      <app-loader [type]="'page'" *ngIf="docLoading"></app-loader>
+      <div class="doc" *ngIf="!docLoading">
         <div class="card">
           <div class="card-header row m-0">
             <h5 class="mb-0 pl-0 align-self-center">{{rowInfo.firstName}}</h5>
@@ -186,7 +87,7 @@
               <div class="role">
                 <label class="text-hi-dark-grey mb-0 mt-2">Role</label>
                 <div class="value">
-                  {{rowInfo.roleId && usrRoles[rowInfo.roleId]?usrRoles[rowInfo.roleId]:'N/A'}}
+                  {{rowInfo.roleId && roles[rowInfo.roleId]?roles[rowInfo.roleId]:'N/A'}}
                 </div>
               </div>
               <div class="password">
@@ -199,7 +100,7 @@
               <div class="language">
                 <label class="text-hi-dark-grey mb-0 mt-2">Language</label>
                 <div class="value">
-                  English
+                  {{rowInfo.languageId && lngs[rowInfo.languageId]?lngs[rowInfo.languageId]:'N/A'}}
                 </div>
               </div>
               <div class="time-zone">
@@ -214,7 +115,7 @@
               <div class="activated">
                 <label class="text-hi-dark-grey mb-0 mt-2">Activated</label>
                 <div class="value">
-                  {{rowInfo.employeeStatus==1?"Yes":"NO"}}
+                  {{rowInfo.isActive?"Yes":"NO"}}
                 </div>
               </div>
             </div>
@@ -300,6 +201,129 @@
   </div>
 </div>
 
+<!-- Heading Search and Filter -->
+<ng-template #srcHdrTxt>
+  <h5 class="card-title px-3">
+    <div class="row heading">
+      <div class="search col-lg-8 col-sm-7">
+        <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
+          <i matPrefix class="fas fa-search"></i>
+          <input matInput placeholder="Search ..." autocomplete="disabled" [(ngModel)]="searchTxt" (ngModelChange)='searchTxtChng.next($event)'>
+          <div matSuffix class="curs-ptr">
+            <i class="fas fa-sliders-h"></i>
+          </div>
+        </mat-form-field>
+      </div>
+      <div class="col-lg-4 col-sm-5 align-self-center">
+        <div class="float-left">
+          <button type="button" class="btn btn-light" (click)="openModal(sendInvitation)">
+            Send Invitations
+          </button>
+        </div>
+        <div class="float-right">
+          <div class="dropdown" (clickOutside)="outsideCloseDD(cogDropDown, $event)">
+            <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
+              <i class="fas fa-cog"></i>
+            </button>
+            <div class="cog dropdown-menu dropdown-menu-right" #cogDropDown>
+              <div class="scrollable">
+                <span class="ml-2 heading">Visible Columns</span>
+                <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList" [cdkDropListData]="visbCols" class="min-ht pl-0 mt-2" [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
+                  <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index" cdkDrag>
+                    <span class="ellipsis mr-2">
+                      <i class="fa fa-ellipsis-v"></i>
+                      <i class="fa fa-ellipsis-v"></i>
+                    </span>
+                    <i class="text-primary fas fa-eye mr-2" (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
+                  </button>
+                  <span *ngIf="visbCols.length==0" class="ml-4 text-secondary">
+                    No visbible columns
+                  </span>
+                </ul>
+                <span class="ml-2 heading">Hidden Columns</span>
+                <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList" [cdkDropListData]="hidCols" class="min-ht pl-0 mt-2 mb-0" [cdkDropListConnectedTo]="[visbList]" (cdkDropListDropped)="drop($event)">
+                  <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index" cdkDrag>
+                    <span class="ellipsis mr-2 mb-1">
+                      <i class="fa fa-ellipsis-v"></i>
+                      <i class="fa fa-ellipsis-v"></i>
+                    </span>
+                    <i class="fas fa-eye-slash mr-2" (click)="showHideCols(col,'show',i)"></i>{{col.n}}
+                  </button>
+                  <span *ngIf="hidCols.length==0" class="ml-4 text-secondary">
+                    No hidden columns
+                  </span>
+                </ul>
+              </div>
+              <hr class="mb-2">
+              <div class="float-right mr-2">
+                <button class="btn btn-secondary btn-sm mr-2" (click)=closeDropdown($event)>Cancel</button>
+                <button class="btn btn-primary btn-sm" (click)=saveHdrChngs($event);>Save</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </h5>
+</ng-template>
+
+<ng-template #usrTable>
+  <div *ngIf="!loading">
+    <div class="card-text px-3">
+      <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showRowInfo}">
+        <thead>
+          <tr>
+            <th class="curs-ptr" *ngFor="let col of cols;let i =index" (click)="sortChange(col,i)">
+              {{col.n}}
+              <i class="ml-1 fas" [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
+            </th>
+          </tr>
+        </thead>
+        <tbody *ngIf="!loading && usrs.length > 0">
+          <tr *ngFor="let usr of usrs" (click)="toggleInfo(usr)" [ngClass]="{'deact': !usr.isActive}">
+            <td *ngFor="let col of cols">
+              <span [ngSwitch]="col.k">
+                <span *ngSwitchCase="'name'">
+                  {{usr.firstName||'N/A'}}<small><br />{{usr.email}}</small>
+                </span>
+                <span *ngSwitchCase="'roleId'">
+                  {{usr.roleId && roles[usr.roleId]?roles[usr.roleId]:'N/A'}}
+                </span>
+                <span *ngSwitchDefault>{{usr[col.k]}}</span>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="text-center text-secondary" *ngIf="!loading && usrs.length == 0">
+        No User found
+      </div>
+    </div>
+    <div class="card-footer row justify-content-between mx-0">
+      <div class="pages">
+        <mat-form-field appearance="outline" class="mr-2">
+          <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
+            <mat-option *ngFor="let lP of lmtPage" [value]="lP">{{lP}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <span>Showing 1-10 of 100 </span>
+      </div>
+      <ul class="pagination">
+        <li class="page-item disabled">
+          <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
+            <i class="fas fa-chevron-left"></i>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
+        <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
+        <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
+        <li class="page-item">
+          <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</ng-template>
 <!-- send invitation modal  -->
 <ng-template #sendInvitation let-modal>
   <div class="modal-header">
@@ -371,7 +395,7 @@
         <mat-form-field appearance="outline">
           <mat-label>Language</mat-label>
           <mat-select formControlName="languageId" required>
-            <mat-option [value]="1">English</mat-option>
+            <mat-option *ngFor="let lng of lngArr" [value]="lng.v">{{lng.n}}</mat-option>
           </mat-select>
           <mat-error *ngIf="usrForm.get('languageId')!.hasError('required')">
             Language is required
@@ -389,7 +413,7 @@
         <mat-form-field appearance="outline">
           <mat-label>Role</mat-label>
           <mat-select formControlName="roleId" required>
-            <mat-option *ngFor="let r of roles" [value]="r.v">{{r.n}}</mat-option>
+            <mat-option *ngFor="let r of rolesArr" [value]="r.v">{{r.n}}</mat-option>
           </mat-select>
           <mat-error *ngIf="usrForm.get('roleId')!.hasError('required')">
             Role is required
@@ -423,13 +447,13 @@
       </div> -->
       <div>
         <mat-label>Status</mat-label>
-        <mat-checkbox class="ml-3 d-block" formControlName="employeeStatus">Activated</mat-checkbox>
+        <mat-checkbox class="ml-3 d-block" formControlName="isActive">Activated</mat-checkbox>
       </div>
       <div *ngIf="!isEdit">
         <mat-label>Password</mat-label>
-        <mat-radio-group class="d-block ml-3" aria-label="Select an option" formControlName="letEmployeeCreatePassword" (change)="togglePassword($event)">
-          <mat-radio-button [value]="true"> Let user choose password upon account confirmation</mat-radio-button>
-          <mat-radio-button [value]="false">Specify password</mat-radio-button>
+        <mat-radio-group class="d-block ml-3" aria-label="Select an option" formControlName="specifyPassword" (change)="togglePassword($event)">
+          <mat-radio-button [value]="false"> Let user choose password upon account confirmation</mat-radio-button>
+          <mat-radio-button [value]="true">Specify password</mat-radio-button>
         </mat-radio-group>
         <mat-form-field class="d-block w-50 mx-auto" appearance="outline" *ngIf="usrForm.controls.password">
           <mat-label>Password</mat-label>
